<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_graphic_eq_24"
            android:title="@string/menu_graph" />
<!--        <item-->
<!--            android:id="@+id/nav_expense_dashboard"-->
<!--            android:icon="@drawable/ic_baseline_graphic_eq_24"-->
<!--            android:title="@string/menu_expense" />-->
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_account_balance_wallet_24"
            android:title="@string/menu_budget" />
        <item
            android:id="@+id/nav_note"
            android:icon="@drawable/ic_baseline_sticky_note_2_24"
            android:title="@string/menu_note" />

        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_settings" />

        <!--        <item-->
        <!--            android:id="@+id/nav_pro"-->
        <!--            android:icon="@drawable/ic_baseline_settings_24"-->
        <!--            android:title="@string/menu_pro" />-->

    </group>


</menu>