<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.xpensemobileapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.xpensemobileapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_graph"
        tools:layout="@layout/fragment_gallery" />

    <activity
        android:id="@+id/budgetReport"
        android:name="com.example.xpensemobileapp.budget.BudgetReportActivity"
        android:label="@string/menu_budget"
        tools:layout="@layout/activity_budget_report" />

    <fragment
        android:id="@+id/nav_note"
        android:name="com.example.xpensemobileapp.ui.note.NoteFragment"
        android:label="@string/menu_note"
        tools:layout="@layout/fragment_note" />

    <activity
        android:id="@+id/nav_expense_dashboard"
        android:name="com.example.xpensemobileapp.expense.ExpensesDashboardActivity"
        android:label="@string/expense"
        tools:layout="@layout/activity_expenses_dashboard" />
</navigation>