<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExpenseReportOverviewActivity"
    android:background="@color/white">

    <TextView
        android:id="@+id/overviewTitle"
        style="@style/overviewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/overviewTitle"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/graphTitle"
        style="@style/graphTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/graphTitle"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/overviewTitle" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="300dp"
        android:layout_height="275dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/graphTitle">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/graphicalRepresentationFragment"
            android:name="com.example.xpensemobileapp.GraphicalRepresentationFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <TextView
        android:id="@+id/summaryTitle"
        style="@style/summaryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/summaryTitle"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/reportNo"
        style="@style/summaryContentHeadings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:text="@string/reportNo"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/summaryTitle" />

    <TextView
        android:id="@+id/summaryDate"
        style="@style/summaryContentHeadings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:text="@string/summaryDate"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/name"
        style="@style/summaryContentHeadings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/reportNo" />

    <TextView
        android:id="@+id/totExpense"
        style="@style/summaryContentHeadings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:text="@string/totExpense"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/totIncome" />

    <TextView
        android:id="@+id/netIncome"
        style="@style/summaryContentHeadings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:text="@string/netIncome"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/totExpense" />

    <TextView
        android:id="@+id/totIncome"
        style="@style/summaryContentHeadings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:text="@string/totIncome"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/summaryDate" />

    <TextView
        android:id="@+id/reportNoValue"
        style="@style/summaryContentValues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="137dp"
        android:text="@string/reportNoValue"
        app:layout_constraintBaseline_toBaselineOf="@+id/reportNo"

        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/nameValue"
        style="@style/summaryContentValues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="110dp"
        android:text="@string/nameValue"
        app:layout_constraintBaseline_toBaselineOf="@+id/name"

        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/summaryDateValue"
        style="@style/summaryContentValues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="121dp"
        android:text="@string/summaryDateValue"
        app:layout_constraintBaseline_toBaselineOf="@+id/summaryDate"

        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/totIncomeValue"
        style="@style/summaryContentValues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="120dp"
        android:text="@string/totIncomeValue"

        app:layout_constraintBaseline_toBaselineOf="@+id/totIncome"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/totExpenseValue"
        style="@style/summaryContentValues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="125dp"
        android:text="@string/totExpenseValue"
        app:layout_constraintBaseline_toBaselineOf="@+id/totExpense"

        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/netIncomeValue"
        style="@style/summaryContentValues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="120dp"
        android:text="@string/netIncomeValue"
        app:layout_constraintBaseline_toBaselineOf="@+id/netIncome"

        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/lineBtn"
        android:layout_width="29dp"
        android:layout_height="29dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"

        android:background="@drawable/graph_btn_background_clicked"


        android:onClick="onClickLineGraphBtn"
        android:paddingLeft="6dp"
        android:paddingTop="3dp"
        android:paddingRight="6dp"
        android:paddingBottom="3dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/line_graph_icon" />

    <ImageButton
        android:id="@+id/pieBtn"
        android:layout_width="29dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_background"
        android:onClick="onClickPieChartBtn"

        android:paddingLeft="3dp"
        android:paddingTop="1dp"
        android:paddingRight="3dp"
        android:paddingBottom="1dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/barBtn"
        app:layout_constraintStart_toEndOf="@+id/lineBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pie_chart_icon" />

    <ImageButton
        android:id="@+id/barBtn"
        android:layout_width="29dp"
        android:layout_height="29dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_background"
        android:onClick="onClickBarGraphBtn"
        android:paddingLeft="5dp"

        android:paddingTop="2dp"
        android:paddingRight="5dp"
        android:paddingBottom="2dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bar_graph_icon" />

    <ImageButton
        android:id="@+id/downloadBtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button_tap_selector"
        android:onClick="onClickDownloadBtn"
        android:paddingLeft="6dp"
        android:paddingTop="3dp"
        android:paddingRight="6dp"
        android:paddingBottom="3dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:srcCompat="@drawable/download_icon" /><![CDATA[

    />

]]>
</androidx.constraintlayout.widget.ConstraintLayout>